--- a/xgboost_train_model.ipynb
+++ b/xgboost_train_model.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import pickle\n",
     "import numpy as np\n",
@@ -33,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_parquet(\"dfs/train_data.parquet.gzip\")\n",
-    "test_df = pd.read_parquet(\"dfs/validate_data.parquet.gzip\")\n",
+    "train_df = pd.read_parquet(\"dfs/train_data.parquet.gzip\").sample(n=100_000)\n",
+    "test_df = pd.read_parquet(\"dfs/validate_data.parquet.gzip\").sample(n=10_000)\n",
     "train_df"
    ]
   },
@@ -72,6 +74,7 @@
    "outputs": [],
    "source": [
     "if save_model:\n",
+    "    os.makedirs(midihum_model.MidihumModel.modeL_cache_path, exist_ok=True)\n",
     "    with open(midihum_model.MidihumModel.scaler_path, \"wb\") as f:\n",
     "        pickle.dump(std_scaler, f)"
    ]
@@ -110,8 +113,8 @@
    "outputs": [],
    "source": [
     "model = xgboost.XGBRegressor(\n",
-    "    booster=\"gbtree\", max_depth=8, learning_rate=0.05, n_estimators=1400, gamma=0.9, min_child_weight=12, subsample=0.8, colsample_bytree=0.9,\n",
-    "    reg_alpha=0.8, reg_lambda=0.5, n_jobs=16, enable_categorical=True)\n",
+    "    booster=\"gbtree\", max_depth=3, learning_rate=0.3, n_estimators=4000, gamma=0.9, min_child_weight=12, subsample=0.5, colsample_bytree=0.5,\n",
+    "    reg_alpha=0.8, reg_lambda=0.8, n_jobs=16, enable_categorical=True)\n",
     "model.fit(X_train, y_train, early_stopping_rounds=5, eval_set=[(X_train, y_train), (X_test, y_test)], verbose=True)"
    ]
   },
