Ues the df trained on

--- a/xgboost_train_model.ipynb
+++ b/xgboost_train_model.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importance_map = dict(zip(train_df.columns, model.feature_importances_))\n",
+    "importance_map = dict(zip(X_train.columns, model.feature_importances_))\n",
     "sorted(importance_map.items(), key=lambda x: x[1], reverse=True)"
    ]
   },
